<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorY">

    <ImageView
        android:icon="@mipmap/ic_launcher"
        android:roundIcon="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="5dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textSize="20dp"
        android:text="@string/title"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:hint="@string/login_username"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:inputType="textPassword"
        android:hint="@string/login_password"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/login_remember_me" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="2">
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="7.5dp"
            android:background="@color/colorR"
            android:text="@string/login_btn"/>
        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorO"
            android:text="@string/register_btn"/>
    </LinearLayout>
</LinearLayout>
